--- a/two.html
+++ b/two.html
@@ -224,6 +224,7 @@
             font-weight: bold;
             border: none;
             background: none;
+            font-size: 10px;
         }
 
         .year label {
@@ -369,6 +370,7 @@
     transform: scale(1.1); /* Phóng to nút khi hover */
 }
 
+
     
 
 
@@ -442,6 +444,13 @@
     }
 
     .husband-signature, .typed-signature {
+        font-size: 18px; /* Giữ kích thước chữ chữ ký gần giống với máy tính */
+        margin: 0; /* Xóa margin */
+        padding: 0; /* Xóa padding */
+        text-align: center; /* Căn giữa chữ ký */
+    }
+
+    .typed-signature {
         font-size: 18px; /* Giữ kích thước chữ chữ ký gần giống với máy tính */
         margin: 0; /* Xóa margin */
         padding: 0; /* Xóa padding */
