update more html

--- a/two.html
+++ b/two.html
@@ -224,7 +224,7 @@
             font-weight: bold;
             border: none;
             background: none;
-            font-size: 10px;
+            font-size: 15px;
         }
 
         .year label {
@@ -257,6 +257,7 @@
             background: none;
             margin-top: 20px;
             text-align: center;
+            color: none;
         }
 
         .sign-two {
@@ -569,7 +570,7 @@
             </div>
             <div class="year">
                 <label for="year">Ngày, tháng, năm đăng ký:</label>
-                <input type="text" id="year" placeholder="................................................">
+                <input type="text" id="year" placeholder="................................................" style="font-weight: bold;">
             </div>
 
             <div class="sign">
